# dreambo_torso_kinematics

./: .gitignore  Cargo.toml  README.md  RELEASE.md  arms.json  pyproject.toml  test.py
.github/workflows/: python-bindings.yml
benches/: kinematics_bench.rs
docs/: CALIBRATION.md
src/: lib.rs  main.rs  neck.rs
src/arm/: fk.rs  geometry.rs  ik.rs  mod.rs
