[package]
name = "dreambo_torso_kinematics"
version = "2.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
env_logger = "0.11.8"
nalgebra = "0.32.3"
pyo3 = "0.25.0"
pyo3-log = "0.12.4"
pyo3-stub-gen = "0.9.0"
rust-numpy = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kinematics_bench"
harness = false
